--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* ./src/index.css */
+
+@tailwind base;
+
+@tailwind components;
+
+@tailwind utilities;
+
+.boton {
+  background: rgb(9, 79, 230);
+  padding: 10px 14px;
+  color: white;
+  font-weight: bold;
+  margin: 6px;
+  border-radius: 24px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@variants hover {
+  .nuevoboton {
+    background: red;
+  }
 }
